fixed minor dark mode issue

--- a/src/style.css
+++ b/src/style.css
@@ -594,7 +594,7 @@ div.text-on-top {
   bottom: 20px;
   right: 20px;
   background-color: #0dcaf0;
-  color: #fff;
+  color: black;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
